# netcdf-mirror

./: Makefile.am  RELEASE_NOTES  acinclude.m4  cf  configure.ac  lib_flags.am
cxx/: Makefile.am
cxx4/: Makefile.am
examples/: Makefile.am
examples/F77/: Makefile.am
examples/F90/: Makefile.am
f90/: Makefile.am  netcdf4_constants.f90
fortran/: Makefile.am  fort-lib.h  ncfortran.h  netcdf4.inc
h5_test/: Makefile.am  tst_h_vars.c
include/: Makefile.am  nc.h  nc4internal.h  ncdispatch.h  netcdf.h  netcdf_f.h  utf8proc.h
libcdmr/: Makefile.am  crutil.c  crutil.h  nccr.c
libdap2/: Makefile.am  Makefile.in  cache.c  cdf3.c  cdf4.c  common34.c  constraint3.c.old  constraints3.c  constraints3.h  constraints4.c  dapattr3.c  dapdump.c  dapodom.c  dapodom.h  daputil.c  daputil.h  dceconstraints.c  dceconstraints.h  dcelex.c  dceparselex.h  env  getvara.h  getvara3.c  getvara4.c  nccommon.h  ncdap3.c  ncdap3.h  ncdap3a.c  ncdap4.c  ncdap4.h  set
libdiskless/: ncddim.c  ncdfile.c  ncdfunc.c  ncdinternal.c  ncdvar.c
libdispatch/: Makefile.am  att.c  copy.c  dap.c  dfile.c  dim.c  dispatch.c  dispatch.h  error.c  file.c  init.c  nc4.c  nc_uri.c  nc_url.c  ncdispatch.h  parallel.c  string.c  stub.c  stubdef.c  v2i.c  var.c
liblib/: Makefile.am  stub.c
libncdap3/: Makefile.am  cache.c  constraints3.c  constraints3.h  dapdebug.h  env  getvara3.c  nccommon.h  ncd3dispatch.c  ncd3dispatch.h  ncdap3.c  ncdap3.h  ncdap3a.c  t_dap3a.c
libncdap4/: Make0  Makefile.am  env  getvara4.c  ncd4dispatch.c  ncd4dispatch.h  ncdap4.c
librpc/: Makefile.am  ncrpcdispatch.c  ncrpcdispatch.h  protorpc.c  protorpc.h  protorpc.proto  rpcdispatch.h
libsrc/: Make0  Makefile.am  attr.m4  dim.c  error3.c  libvers.c  lookup3.c  memio.c  nc.c  nc.h  nc3dispatch.c  nc3dispatch.h  ncFile.c  ncio.c  ncio.h  nclistmgr.c  ncstdio.c  ncstdio.h  ncvfs.c  ncvfs.h  ncx.h  ncx.m4  ncx_cray.c  posixio.c  putget.m4  string.c  stub3.c  v1hpg.c  v1hvfs.c  var.c
libsrc4/: Makefile.am  error4.c  nc3stub.c  nc3stub.h  nc4attr.c  nc4dim.c  nc4dispatch.c  nc4dispatch.h  nc4file.c  nc4grp.c  nc4hdf.c  nc4internal.c  nc4internal.h  nc4type.c  nc4var.c  ncfunc.c  run_valgrind_tests.sh  stub3.c  tst_dims.c  tst_files.c  tst_fills.c  tst_h_files4.c  tst_h_files5.c  tst_h_strings2.c  tst_xplatform2.c
man4/: install.doc  netcdf-install.texi  netcdf.texi
nc_test/: Makefile.am  nc_test.c  run_diskless.sh  test_get.m4  test_put.m4  test_read.c  test_write.c  tests.h  tst_diskless.c  tst_diskless4.c  tst_nofill.c  util.c  x.sh  y.sh
nc_test4/: Makefile.am  run_tst_chunks.sh  run_valgrind_tests.sh  tst_ar4_3d.c  tst_atts1.c  tst_diskless.c  tst_diskless2.c  tst_files.c
ncdap_test/: Makefile.am  test_cvt.c  tst_ncdap.sh  tst_ncdap3.sh  tst_ncdap_shared.sh  tst_remote.sh
ncdap_test/testdata3/: Makefile.am
ncdump/: Makefile.am  dumplib.c  nccopy.c  ncdump.c  nciter.c  ref_big_var.cdl  ref_tst_iter.cdl  run_back_comp_tests.sh  tst_charfill.sh  tst_fillbug.c  tst_iter.sh
ncdump/expected4/: ref_solar.dmp
ncgen/: Makefile.am  bindata.c  cdata.c  data.c  data.h  debug.h  env  f77data.c  genbin.c  genc.c  genchar.c  generate.c  genf77.c  genj.c  genlib.h  getfill.c  includes.h  jdata.c  main.c  ncgen.1  ncgen.h  ncgen.l  ncgen.y  ncgentab.c  ncgenyy.c  nciter.c  odom.c  odom.h  semantics.c  util.c  util.h  walkdata.c
ncgen3/: Makefile.am
ncremote_test/: junk
ncremote_test/expected3/: Makefile.in
ncremote_test/expected4/: Makefile.in
ncremote_test/expectremote3/: Makefile.in
ncremote_test/expectremote4/: Makefile  Makefile.in
ncremote_test/testdata3/: Makefile.in
nctest/: Makefile.am  atttests.c  dimtests.c  tst_rename.c
nf_test/: Makefile.am  f90tst_vars_vlen.f90  ftst_vars3.F
oc/: Make0  Makefile.am  curlfunctions.c  daplex.c  dapurl.c  dapurl.h  http.c  http.h  oc.c  ocdata.c  ocdebug.h  ocdump.c  ocinstance.c  ocinternal.c  ocinternal.h  oclog.c  ocnode.c  ocrc.c  ocuri.c  ocutil.c  rc.c  read.c  read.h
win32/NET/: clean  config.h  config.template  fix  mam  vs  vsbuild
win32/NET/libsrc/: junk  netcdf.template  netcdf.vcproj
win32/NET/nc_test/: nc_test.vcproj  quick_large_files.template  quick_large_files.vcproj
(+4 files in other folders)
